# access_control/models/user_with_roles.py
@@ -17,7 +17,7 @@ import re  # noqa: F401
 import six
 
 
-class UserAndRoles(object):
+class UserWithRoles(object):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
@@ -32,67 +32,67 @@ class UserAndRoles(object):
     """
     swagger_types = {
         'user_id': 'str',
-        'roles': 'list[str]'
+        'role_ids': 'list[str]'
     }
 
     attribute_map = {
         'user_id': 'user_id',
-        'roles': 'roles'
+        'role_ids': 'role_ids'
     }
 
-    def __init__(self, user_id=None, roles=None):  # noqa: E501
-        """UserAndRoles - a model defined in Swagger"""  # noqa: E501
+    def __init__(self, user_id=None, role_ids=None):  # noqa: E501
+        """UserWithRoles - a model defined in Swagger"""  # noqa: E501
 
         self._user_id = None
-        self._roles = None
+        self._role_ids = None
         self.discriminator = None
 
         if user_id is not None:
             self.user_id = user_id
-        if roles is not None:
-            self.roles = roles
+        if role_ids is not None:
+            self.role_ids = role_ids
 
     @property
     def user_id(self):
-        """Gets the user_id of this UserAndRoles.  # noqa: E501
+        """Gets the user_id of this UserWithRoles.  # noqa: E501
 
 
-        :return: The user_id of this UserAndRoles.  # noqa: E501
+        :return: The user_id of this UserWithRoles.  # noqa: E501
         :rtype: str
         """
         return self._user_id
 
     @user_id.setter
     def user_id(self, user_id):
-        """Sets the user_id of this UserAndRoles.
+        """Sets the user_id of this UserWithRoles.
 
 
-        :param user_id: The user_id of this UserAndRoles.  # noqa: E501
+        :param user_id: The user_id of this UserWithRoles.  # noqa: E501
         :type: str
         """
 
         self._user_id = user_id
 
     @property
-    def roles(self):
-        """Gets the roles of this UserAndRoles.  # noqa: E501
+    def role_ids(self):
+        """Gets the role_ids of this UserWithRoles.  # noqa: E501
 
 
-        :return: The roles of this UserAndRoles.  # noqa: E501
+        :return: The role_ids of this UserWithRoles.  # noqa: E501
         :rtype: list[str]
         """
-        return self._roles
+        return self._role_ids
 
-    @roles.setter
-    def roles(self, roles):
-        """Sets the roles of this UserAndRoles.
+    @role_ids.setter
+    def role_ids(self, role_ids):
+        """Sets the role_ids of this UserWithRoles.
 
 
-        :param roles: The roles of this UserAndRoles.  # noqa: E501
+        :param role_ids: The role_ids of this UserWithRoles.  # noqa: E501
         :type: list[str]
         """
 
-        self._roles = roles
+        self._role_ids = role_ids
 
     def to_dict(self):
         """Returns the model properties as a dict"""
@@ -128,7 +128,7 @@ class UserAndRoles(object):
 
     def __eq__(self, other):
         """Returns true if both objects are equal"""
-        if not isinstance(other, UserAndRoles):
+        if not isinstance(other, UserWithRoles):
             return False
 
         return self.__dict__ == other.__dict__
